# brusta

./: .gitignore  LICENSE  README.md  index.html
burner/: build.sbt
burner/flint/: daemon.sh  nohup-start.sh  nohup-stop.sh  server.sh
burner/lighter/: server.sh  stop.sh
burner/project/: plugins.sbt
burner/src/main/resources/: logback.xml
burner/src/main/scala/: EvalJNI.scala  ManageRequest.scala  RunEval.scala  RunServer.scala
docker/: Dockerfile-brusta  Dockerfile-brusta-server
freezer/: CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_macos.txt  EvalJNI.h  Model-DNN.cpp  Model.hpp
launcher/: CMakeLists.txt  EvalJNI.h  Model-DNN.cpp  Model-RNN.cpp
lever/: build.sbt  ignite.sh
lever/src/main/resources/: application.conf  form.html  logback.xml  submit.html
lever/src/main/scala/: ManageRequest.scala  RunServer.scala  SummitService.scala
server/resources/: daemon.sh  restart-server.sh  run-server.sh  server.sh  start.sh  stop-server.sh  stop.sh
simpleBurner/: Dockerfile-brusta  README.md  copy-from-docker.sh
simpleBurner/src/: CMakeLists.txt  EvalJNI.h  Model.cpp  Model.hpp  ModelSpec.hpp
